3.5.2/_sources/gallery/units/bar_demo2.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/units/bar_demo2.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_gallery_units_bar_demo2.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_units_bar_demo2.py:


===================
Bar demo with units
===================

A plot using a variety of centimetre and inch conversions. This example shows
how default unit introspection works (ax1), how various keywords can be used to
set the x and y units to override the defaults (ax2, ax3, ax4) and how one can
set the xlimits using scalars (ax3, current units assumed) or units
(conversions applied to get the numbers to current units).

.. only:: builder_html

   This example requires :download:`basic_units.py <basic_units.py>`

.. GENERATED FROM PYTHON SOURCE LINES 16-38



.. image-sg:: /gallery/units/images/sphx_glr_bar_demo2_001.png
   :alt: bar demo2
   :srcset: /gallery/units/images/sphx_glr_bar_demo2_001.png, /gallery/units/images/sphx_glr_bar_demo2_001_2_0x.png 2.0x
   :class: sphx-glr-single-img





.. code-block:: default

    import numpy as np
    from basic_units import cm, inch
    import matplotlib.pyplot as plt

    cms = cm * np.arange(0, 10, 2)
    bottom = 0 * cm
    width = 0.8 * cm

    fig, axs = plt.subplots(2, 2)

    axs[0, 0].bar(cms, cms, bottom=bottom)

    axs[0, 1].bar(cms, cms, bottom=bottom, width=width, xunits=cm, yunits=inch)

    axs[1, 0].bar(cms, cms, bottom=bottom, width=width, xunits=inch, yunits=cm)
    axs[1, 0].set_xlim(2, 6)  # scalars are interpreted in current units

    axs[1, 1].bar(cms, cms, bottom=bottom, width=width, xunits=inch, yunits=inch)
    axs[1, 1].set_xlim(2 * cm, 6 * cm)  # cm are converted to inches

    fig.tight_layout()
    plt.show()


.. _sphx_glr_download_gallery_units_bar_demo2.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: bar_demo2.py <bar_demo2.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: bar_demo2.ipynb <bar_demo2.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    Keywords: matplotlib code example, codex, python plot, pyplot
    `Gallery generated by Sphinx-Gallery
    <https://sphinx-gallery.readthedocs.io>`_
